test: update select method query provider using ondro's approach
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>